# freshmeal

./: .gitignore  .mise.toml  LICENSE  generate_proto.bat  generate_proto.ps1  generate_proto.sh
.github/workflows/: release.yml
backend/: .env-example  .mise.toml  Cargo.toml  backup_full_data.sql  backup_products.sql  backup_users_products.sql  build.rs  freshmeal_table.sql  user.sql
backend/.sqlx/: query-0799220a8bf40de78c89cb0d7f79fb011889cbd910ec0c47934ece4095f77e98.json  query-60f7a92c4610b41723591b6a9d5bbbd80642c095af74bf344a561887880efa47.json  query-7d9edaba3dab2a8b5420354abb61f4cc5f38b86017a6dce0156f0080fff1dcf9.json  query-9a5d26218be2987cbb08d4f0b4da672f55298f9c0bedb4da2c1c4022bc2f011f.json  query-9d50dbfb4987ee4f43459b647eb3968ba3b2d91242d0994d91ca8e1b8c1f6e79.json  query-a2caa063b4e28433ce8aa989b81320ff26a2fe31c6669ff8e41b70d98ee41be0.json  query-be00e9179b8a49984821e78e79a65ed073c0067fa5b9b0e5f0011b123cabf4e2.json  query-c10c0a7edb8a84963f23121c810132ef2613d4b7ad6be6c2fd848623bfa65ebb.json  query-db240c37e05ccf42d33156caaecb7c5d31bfa5176483834320d45789da8bc15a.json  query-e5eb978b4fc9b1c57d869bea15bb8a6e24db59abadb3ae2004545b9269b42ce7.json  query-f185b70d6f76b4b8bac0a03265b48f1be0cbd8a52bc833f1c1d7a8d3a2d6ffb6.json
backend/migrations/: 20260627141551_migration.sql  20260628120000_branches.sql  20260703000000_delivery_location.sql
backend/src/: auth.rs  error.rs  handlers.rs  main.rs  models.rs  utils.rs
backend/src/entities/: orders.rs  products.rs  users.rs
frontend/: .gitignore  .mise.toml  config.json  pubspec.yaml
schema/: freshmeal.proto
(+22 files in other folders)
