[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
rust_decimal = { version = "1.40.0", features = ["serde"] }
bcrypt = "0.18.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
actix-multipart = "0.7.2"
futures-util = "0.3.32"
uuid = { version = "1", features = ["v4"] }
actix-files = "0.6.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "macros", "chrono", "rust_decimal"] }
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
prost = "0.13"
bytes = "1"

[build-dependencies]
prost-build = "0.13"
